src/objects/CallOut__c.object
<CustomObject>
    <fields>
        <fullName>Authorization__c</fullName>
        <label>Authorization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CheckDate__c</fullName>
        <label>CheckDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CheckNumber__c</fullName>
        <label>CheckNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>EndTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ErrorMessage__c</fullName>
        <label>ErrorMessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCR_SubStatus__c</fullName>
        <label>OCR Sub Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Check Part</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CallOuts</relationshipLabel>
        <relationshipName>CallOuts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request2__c</fullName>
        <label>Request2</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request__c</fullName>
        <label>Request</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response2__c</fullName>
        <label>Response2</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>131070</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>StartTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--none--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--none--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>CallOut</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>StartTime__c</columns>
        <columns>EndTime__c</columns>
        <columns>Request__c</columns>
        <columns>Response__c</columns>
        <columns>Duration__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>DubaiAMCase</fullName>
        <columns>NAME</columns>
        <columns>Request__c</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>DubaiAMCase</value>
        </filters>
        <label>DubaiAMCase</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EXTRACTA</fullName>
        <columns>NAME</columns>
        <columns>Response__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>EXTRACTA</value>
        </filters>
        <label>EXTRACTA</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>OCR</fullName>
        <columns>NAME</columns>
        <columns>Outlet__c</columns>
        <columns>CheckNumber__c</columns>
        <columns>CheckDate__c</columns>
        <columns>Subtotal__c</columns>
        <columns>VAT__c</columns>
        <columns>Total__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>OCR</value>
        </filters>
        <label>OCR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Success</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Request__c</columns>
        <columns>StartTime__c</columns>
        <columns>Duration__c</columns>
        <columns>URL__c</columns>
        <columns>Response__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Error</value>
        </filters>
        <label>Success</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CA{000000000}</displayFormat>
        <label>CallOut Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CallOuts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>